feat: new index.html and style.css, finished the contact us form in FIGMA.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,44 @@
 
 <html lang="en">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>Zebb Agency</title>
     </head>
     <body>
-        
+        <header class="header">
+
+        </header>
+        <article>
+            <div class="contact-us">
+                <div class="contact-us-image"></div>
+                <div class="form">
+                    <h2>Need Help Making Coffee? Contact Us</h2>
+                    <div class="underline-red"></div>
+                    <form action="submit" class="form-sub">
+                        <div class="name-card">
+                            <p class="name">Name</p>
+                            <input class="input-name" type="text">
+                        </div>
+                        <div class="email-card">
+                            <p class="email">Email</p>
+                            <input type="email" class="input-email">
+                        </div>
+                        <div class="message-card">
+                            <p class="message">Message</p>
+                            <input id="message-input" type="text" class="input-message">
+                        </div>
+                        <button type="submit" class="form-button">Send</button>
+                    </form>
+                </div>
+            </div>
+        </article>
+        <footer class="footer">
+
+        </footer>
     </body>
 </html>
