feat: added the newsletter part

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </header>
         <article>
             <div class="contact-us">
-                <div class="contact-us-image"></div>
+                <div class="placeholder-image"></div>
                 <div class="form">
                     <h2>Need Help Making Coffee? Contact Us</h2>
-                    <div class="underline-red"></div>
+                    <div class="underline-red-form"></div>
                     <form action="submit" class="form-sub">
                         <div class="name-card">
                             <p class="name">Name</p>
@@ -37,9 +37,26 @@
                     </form>
                 </div>
             </div>
+            <div class="newsletter">
+                <div class="news-form">
+                    <h2>Join Our Newsletters & get Coffee Formula!</h2>
+                    <div class="underline-red-news"></div>
+                    <form action="submit" class="news-form-sub">
+                        <div class="name-card">
+                            <p class="name">Name</p>
+                            <input type="text" class="input-name">
+                        </div>
+                        <div class="email-card">
+                            <p class="email">Email</p>
+                            <input type="email" class="input-email">
+                        </div>
+                        <button type="submit" class="form-button">Send</button>
+                    </form>
+                </div>
+                <div class="placeholder-image"></div>
+            </div>
         </article>
         <footer class="footer">
-
         </footer>
     </body>
 </html>
