feat: finished the team section, and added the shadow to the button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,55 @@
 
         </header>
         <article>
+            <div class="team">
+                <h2>Meet the Team</h2>
+                <div class="red-underline"></div>
+                <div class="team-grid">
+                    <div class="member Samantha">
+                        <div class="image-member"></div>
+                        <div class="member-info">
+                            <h3 class="member-name">Samantha Jones</h3>
+                            <p>Illustrator</p>
+                        </div>
+                    </div>
+                    <div class="member Mark">
+                        <div class="image-member"></div>
+                        <div class="member-info-mark">
+                            <h3 class="member-name-mark">Mark Ali</h3>
+                            <p>Owner Creative Director</p>
+                            <p>See Details</p>
+                        </div>
+                    </div>
+                    <div class="member Davi">
+                        <div class="image-member"></div>
+                        <div class="member-info-davi">
+                            <h3 class="member-name-davi">Davi John</h3>
+                            <p>Head of Marketing</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="image-member"></div>
+                        <div class="member-info-john">
+                            <h3 class="member-name-john">John Daen</h3>
+                            <p>Graphic Designer</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="image-member"></div>
+                        <div class="member-info-alice">
+                            <h3 class="member-name-alice">Alice Kate</h3>
+                            <p>Social Media Manager</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="image-member"></div>
+                        <div class="member-info-jhang">
+                            <h3 class="member-name-jhang">Jhang Yui</h3>
+                            <p>Web Designer & Developer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="contact-us">
                 <div class="placeholder-image"></div>
                 <div class="form">
