--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
         </header>
         <article>
+            <div class="craft-experience">
+                <div class="craft-exp-text">
+                    <h2>We craft experiences for business to help reach <br>our customers</h2>
+                    <div class="red-underline-craft"></div>
+                    <p id="craft-exp-p">But I must explain to you how all thismistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</p>
+                    <button id="craft-exp-btn">Learn more</button>
+                </div>
+                <img class="craft-exp-image" src="/home/chris/Documents/pre-app/exercises/Figma-Site-Statique-HTML-CSS/images/craft-experience-image.jpg" alt="image of a crowded cafe">
+            </div>
             <div class="team">
                 <h2>Meet the Team</h2>
                 <div class="red-underline"></div>
