feat: finished the powered by section.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,32 @@
 
         </header>
         <article>
-            <div class="craft-experience">
+            <div class="powered"> <!--powered-->
+                <img src="/home/chris/Documents/pre-app/exercises/Figma-Site-Statique-HTML-CSS/images/powered-by-image.jpg" alt="image of a kitchen with people working" class="powered-image">
+                <div class="powered-content">
+                    <div class="powered-content-text">
+                        <h2 class="powered-title">Powered by <br>talented people</h2>
+                        <p class="powered-description">But I must explain to you how all thismistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.
+
+                            <br><br>I wrote to let them know ready to came back they kicked me of their team slack all of us are make company email.</p>
+                    </div>
+                    <div class="red-underline-powered"></div>
+                    <div class="powered-content-buttons">
+                        <button class="craft-exp-btn">Learn more</button>
+                        <div class="play-btn">
+                            <img src="/home/chris/Documents/pre-app/exercises/Figma-Site-Statique-HTML-CSS/images/Play btn.png" alt="a play button" class="play-btn-input">
+                            <p class="play-button-text">Watch videos</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="craft-experience"><!--craft Experience-->
                 <div class="craft-exp-text">
                     <h2>We craft experiences for business to help reach <br>our customers</h2>
                     <div class="red-underline-craft"></div>
                     <p id="craft-exp-p">But I must explain to you how all thismistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</p>
-                    <button id="craft-exp-btn">Learn more</button>
+                    <button class="craft-exp-btn">Learn more</button>
                 </div>
                 <img class="craft-exp-image" src="/home/chris/Documents/pre-app/exercises/Figma-Site-Statique-HTML-CSS/images/craft-experience-image.jpg" alt="image of a crowded cafe">
             </div>
