feat: finished the things we enjoy section.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,64 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="things-we-enjoy">
+                <div class="first-div">
+                    <h2>Things We Enjoy</h2><div class="underlined-pink"></div>
+                    <div class="four-six">
+                        <div class="fourth">
+                            <h2 class="numbers-title">04</h2>
+                            <div class="contents">
+                                <h3 class="titles">Content writing</h3>
+                                <p class="descriptions">But I must explain to you how all this mistaken 
+                                    idea of denouncing pleasure</p>
+                            </div>
+                        </div>
+                        <div class="fifth">
+                            <h2 class="numbers-title">05</h2>
+                            <div class="contents">
+                                <h3 class="titles">Video Production</h3>
+                                <p class="descriptions">But I must explain to you how all this mistaken 
+                                    idea of denouncing pleasure</p>
+                            </div>
+                        </div>
+                        <div class="sixth">
+                            <h2 class="numbers-title">06</h2>
+                            <div class="contents">
+                                <h3 class="titles">Social media marketing</h3>
+                                <p class="descriptions">But I must explain to you how all this mistaken 
+                                    idea of denouncing pleasure</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="second-div">
+                    <div class="first">
+                        <h2 class="numbers-title white">01</h2>
+                        <div class="contents">
+                            <h3 class="titles">Digital Illustration</h3>
+                            <p class="descriptions">But I must explain to you how all this mistaken 
+                                idea of denouncing pleasure</p>
+                        </div>
+                    </div>
+                    <div class="second">
+                        <h2 class="numbers-title white">02</h2>
+                        <div class="contents">
+                            <h3 class="titles">Website design & development</h3>
+                            <p class="descriptions">But I must explain to you how all this mistaken 
+                                idea of denouncing pleasure</p>
+                        </div>
+                    </div>
+                    <div class="third">
+                        <h2 class="numbers-title white">03</h2>
+                        <div class="contents">
+                            <h3 class="titles">Social media management</h3>
+                            <p class="descriptions">But I must explain to you how all this mistaken 
+                                idea of denouncing pleasure</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="background-pink"></div>
             <div class="craft-experience"><!--craft Experience-->
                 <div class="craft-exp-text">
                     <h2>We craft experiences for business to help reach <br>our customers</h2>
