feat: finished the footer.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <header class="header">
 
         </header>
+        <div class="underline-red-footer"></div>
+        <div class="container"><div class="underline-red-footer2"></div></div>
         <article>
             <div class="powered"> <!--powered-->
-                <img src="/home/chris/Documents/pre-app/exercises/Figma-Site-Statique-HTML-CSS/images/powered-by-image.jpg" alt="image of a kitchen with people working" class="powered-image">
+                <img src="images/powered-by-image.jpg" alt="image of a kitchen with people working" class="powered-image">
                 <div class="powered-content">
                     <div class="powered-content-text">
                         <h2 class="powered-title">Powered by <br>talented people</h2>
@@ -28,7 +30,7 @@
                     <div class="powered-content-buttons">
                         <button class="craft-exp-btn">Learn more</button>
                         <div class="play-btn">
-                            <img src="/home/chris/Documents/pre-app/exercises/Figma-Site-Statique-HTML-CSS/images/Play btn.png" alt="a play button" class="play-btn-input">
+                            <img src="images/Play btn.png" alt="a play button" class="play-btn-input">
                             <p class="play-button-text">Watch videos</p>
                         </div>
                     </div>
@@ -99,7 +101,7 @@
                     <p id="craft-exp-p">But I must explain to you how all thismistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</p>
                     <button class="craft-exp-btn">Learn more</button>
                 </div>
-                <img class="craft-exp-image" src="/home/chris/Documents/pre-app/exercises/Figma-Site-Statique-HTML-CSS/images/craft-experience-image.jpg" alt="image of a crowded cafe">
+                <img class="craft-exp-image" src="images/craft-experience-image.jpg" alt="image of a crowded cafe">
             </div>
             <div class="team">
                 <h2>Meet the Team</h2>
@@ -192,6 +194,66 @@
             </div>
         </article>
         <footer class="footer">
+            <div class="footer-info">
+                <div class="where-to-find-us">
+                    <img class="logo-footer" src="images/Logo.png" alt="The logo">
+                    <div class="social-networks">
+                        <a href="index.html"><img src="images/facbook.png" alt="logo de facebook"></a>
+                        <a href="index.html"><img src="images/instagram.png" alt="logo d'instagram"></a>
+                        <a href="index.html"><img src="images/linkedin.png" alt="logo de linkedin"></a>
+                        <a href="index.html"><img src="images/ball.png" alt="logo de ???"></a>
+                        <a href="index.html"><img src="images/twitter.png" alt="logo de twitter"></a>
+                    </div>
+                    <div class="address">
+                        <h3 class="address-title">Address</h3>
+                        <p class="num-telephone">+123 654 987</p>
+                        <p class="address-description">877 The Bronx, NY 14568 USA</p>
+                    </div>
+                </div>
+                <div class="services">
+                    <h3 class="title-footer">Services</h3>
+                    <div class="services-text">
+                        <p class="services-p">Search Engine Optimization</p>
+                        <p class="services-p">Web design & development</p>
+                        <p class="services-p">Social media management</p>
+                        <p class="services-p">Social media marketing</p>
+                        <p class="services-p">Content writing</p>
+                        <p class="services-p">Video production</p>
+                    </div>
+                </div>
+                <div class="company">
+                    <h3 class="title-footer">Company</h3>
+                    <div class="company-text">
+                        <p class="company-p">Case Studies</p>
+                        <p class="company-p">Web design & Services</p>
+                        <p class="company-p">About</p>
+                        <p class="company-p">Contact Us</p>
+                    </div>
+                </div>
+                <div class="about-us">
+                    <h3 class="title-footer">About Us</h3>
+                    <div class="about-us-text">
+                        <p class="about-us-p">Featured Artists</p>
+                        <p class="about-us-p">The Portal</p>
+                        <p class="about-us-p">Live events</p>
+                    </div>
+                </div>
+                <div class="legal-stuff">
+                    <h3 class="title-footer">Legal Stuff</h3>
+                    <div class="legal-stuff-text">
+                        <p class="legal-stuff-p">Shipping & Delivery</p>
+                        <p class="legal-stuff-p">Terms & Conditions</p>
+                        <p class="legal-stuff-p">Privacy & Policy</p>
+                    </div>
+                </div>
+            </div>
+            <div class="terms">
+                <p class="copyright">Copyright ©2020 Zebb Agency. All Right Reserved</p>
+                <div class="policy">
+                    <p class="policy-p">Cookie Policy</p>
+                    <p class="policy-p-privacy">Privacy Policy</p>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
