feat: finished the home page header section needs fix: some pink background needs to be placed back

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
         <div class="underline-red-footer"></div>
         <div class="container"><div class="underline-red-footer2"></div></div>
         <article>
+            <div class="home-page">
+                <div class="home-content">
+                    <div class="headline">
+                        <h1 class="home-title">We help to Create <span>Brands</span> With Coffee</h1>
+                        <div class="highlight-red"></div>
+                    </div>
+                    <button class="home-button">See our work</button>
+                </div>
+                <img src="images/home-page-image.jpg" alt="picture of a coffee" class="home-page-image">
+            </div>
             <div class="powered"> <!--powered-->
                 <img src="images/powered-by-image.jpg" alt="image of a kitchen with people working" class="powered-image">
                 <div class="powered-content">
