feat: finished the header section. nedds fix: some pink backgrounds needs to be placed again.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     </head>
     <body>
         <header class="header">
-
+            <img src="images/Logo.png" alt="The logo" class="logo-header">
+            <div class="menu">
+                <div class="menu-text">
+                    <div class="underlined-header">
+                        <p class="home">HOME</p>
+                    </div>
+                    <p class="home">ABOUT</p>
+                    <p class="home">SERVICES</p>
+                    <p class="home">OUR WORK</p>
+                </div>
+                <button class="header-button">CONTACT US</button>
+            </div>
         </header>
         <div class="underline-red-footer"></div>
         <div class="container"><div class="underline-red-footer2"></div></div>
