feat: finished the previous work section. needs fix: still needs to place back the pink backgrounds.

--- a/index.html
+++ b/index.html
@@ -173,6 +173,29 @@
                     </div>
                 </div>
             </div>
+            <div class="previous-work">
+                <div class="headline-previous-work">
+                    <h2 class="previous-work-title">Some of Our Previous Work</h2>
+                    <div class="red-highlight-previous-work"></div>
+                </div>
+                <div class="previous-work-index">
+                    <div class="all-previous-work">
+                        <p class="previous-work-p all-p"><span>ALL</span></p>
+                    </div>
+                    <p class="previous-work-p">Illustration</p>
+                    <p class="previous-work-p">App</p>
+                    <p class="previous-work-p">Branding</p>
+                </div>
+                <div class="previous-work-grid">
+                    <div class="a"></div>
+                    <div class="b"></div>
+                    <div class="c"></div>
+                    <div class="d"></div>
+                    <div class="e"></div>
+                    <div class="f"></div>
+                </div>
+                <button class="previous-work-button">See More</button>
+            </div>
             <div class="contact-us">
                 <div class="placeholder-image"></div>
                 <div class="form">
