feat: finished the testimonial section. needs fix: place back the pink backgrounds.

--- a/index.html
+++ b/index.html
@@ -196,6 +196,105 @@
                 </div>
                 <button class="previous-work-button">See More</button>
             </div>
+            <div class="testimonial">
+                <div class="testimonial-heading">
+                    <h2 class="testimonial-title">Testimonial</h2>
+                    <p class="testimonial-text">Over 18,000 happy clients.</p>
+                </div>
+                <div class="testimonial-grid">
+                    <div class="first-testimonial">
+                        <div class="first-testimonial-div">
+                            <div class="testimonial-image"></div>
+                            <div class="stars-div">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                            </div>
+                            <p class="testimonial-content">“My experience with Mark is a complete success, from customer service, wide range of products, clean store, purchasing experience"</p>
+                        </div>
+                        <div class="second-testimonial-div">
+                            <p class="testimonial-name">Samantha Kate</p>
+                            <p class="testimonial-class">CEO of Floatcom</p>
+                        </div>
+                    </div>
+                    <div class="second-testimonial">
+                        <div class="first-testimonial-div">
+                            <div class="testimonial-image"></div>
+                            <div class="stars-div">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                            </div>
+                            <p class="testimonial-content">“My experience with Mark is a complete success, from customer service, wide range of products, clean store, purchasing experience"</p>
+                        </div>
+                        <div class="second-testimonial-div">
+                            <p class="testimonial-name">Samantha Kate</p>
+                            <p class="testimonial-class">CEO of Floatcom</p>
+                        </div>
+                    </div>
+                    <div class="fake-third-testimonial">
+                        <div class="third-testimonial">
+                            <div class="first-testimonial-div">
+                                <div class="testimonial-image"></div>
+                                <div class="stars-div">
+                                    <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                    <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                    <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                    <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                    <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                </div>
+                                <p id="id3" class="testimonial-content">“My experience with Mark is a complete success, from customer service, wide range of products, clean store, purchasing experience"</p>
+                            </div>
+                            <div class="second-testimonial-div">
+                            <p class="testimonial-name">Samantha Kate</p>
+                            <p class="testimonial-class">CEO of Floatcom</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="fourth-testimonial">
+                        <div class="first-testimonial-div">
+                            <div class="testimonial-image"></div>
+                            <div class="stars-div">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                            </div>
+                            <p class="testimonial-content">“My experience with Mark is a complete success, from customer service, wide range of products, clean store, purchasing experience"</p>
+                        </div>
+                        <div class="second-testimonial-div">
+                            <p class="testimonial-name">Samantha Kate</p>
+                            <p class="testimonial-class">CEO of Floatcom</p>
+                        </div>
+                    </div>
+                    <div class="fifth-testimonial">
+                        <div class="first-testimonial-div">
+                            <div class="testimonial-image"></div>
+                            <div class="stars-div">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                                <img src="images/Vector.svg" alt="a yellow star" class="stars">
+                            </div>
+                            <p class="testimonial-content">“My experience with Mark is a complete success, from customer service, wide range of products, clean store, purchasing experience"</p>
+                        </div>
+                        <div class="second-testimonial-div">
+                            <p class="testimonial-name">Samantha Kate</p>
+                            <p class="testimonial-class">CEO of Floatcom</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-arrows">
+                    <img src="images/left.svg" alt="left arrow" class="arrow">
+                    <img src="images/right.svg" alt="right arrow" class="arrow">
+                </div>
+            </div>
             <div class="contact-us">
                 <div class="placeholder-image"></div>
                 <div class="form">
