fix: fixed the comments on style.css and index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <img src="images/home-page-image.jpg" alt="picture of a coffee" class="home-page-image">
             </div>
-            <div class="powered"> <!--powered-->
+            <div class="powered">
                 <img src="images/powered-by-image.jpg" alt="image of a kitchen with people working" class="powered-image">
                 <div class="powered-content">
                     <div class="powered-content-text">
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="background-pink"></div>
-            <div class="craft-experience"><!--craft Experience-->
+            <div class="craft-experience">
                 <div class="craft-exp-text">
                     <h2>We craft experiences for business to help reach <br>our customers</h2>
                     <div class="red-underline-craft"></div>
