--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             <img src="images/Logo.png" alt="The logo" class="logo-header">
             <div class="menu">
                 <div class="menu-text">
-                    <div class="underlined-header">
-                        <p class="home">HOME</p>
-                    </div>
+                    <p class="home">HOME</p>
                     <p class="home">ABOUT</p>
                     <p class="home">SERVICES</p>
                     <p class="home">OUR WORK</p>
@@ -36,7 +34,7 @@
                     </div>
                     <button class="home-button">See our work</button>
                 </div>
-                <img src="images/home-page-image.jpg" alt="picture of a coffee" class="home-page-image">
+                <div class="img-container"><img src="images/home-page-image.jpg" alt="picture of a coffee" class="home-page-image"></div>
             </div>
             <div class="powered">
                 <img src="images/powered-by-image.jpg" alt="image of a kitchen with people working" class="powered-image">
@@ -51,7 +49,7 @@
                     <div class="powered-content-buttons">
                         <button class="craft-exp-btn">Learn more</button>
                         <div class="play-btn">
-                            <img src="images/Play btn.png" alt="a play button" class="play-btn-input">
+                            <img src="images/Play-btn.png" alt="a play button" class="play-btn-input">
                             <p class="play-button-text">Watch videos</p>
                         </div>
                     </div>
